[package]
name = "ts6-voice-translator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ts6-voice-translator"
path = "src/main.rs"

[dependencies]
# PURA-108 WS-7 / PURA-114 — Phase 3.5 WebRTC bridge translator scaffold (slice b).
#
# Same tsclientlib pin as crates/ts6-voice-prototype: master @ 04aa249. The
# `audio` feature unlocks `StreamItem::Audio` so slice c can subscribe to
# inbound TS6 voice frames without reshuffling deps. Default-features off
# (no SRV resolver — we connect to host:port directly, no resolver TLS).
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", rev = "04aa24917abbf6a0c8442a79742d6d2d40ecf71e", default-features = false, features = ["audio"] }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib", rev = "04aa24917abbf6a0c8442a79742d6d2d40ecf71e" }

# LiveKit access-token minting. The token format is plain HS256 JWT, well
# documented under https://docs.livekit.io/home/get-started/authentication/ —
# minting it ourselves with `jsonwebtoken` keeps token roundtrip tests fast
# (no SDK init) and avoids tying token shape to an SDK version bump.
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# LiveKit Rust SDK. Slice c uses `livekit::Room::connect` + `LocalAudioTrack`
# to publish the synthetic translator track into the LiveKit room. The crate
# depends on `webrtc-sys` (libwebrtc bindings); the upstream build script
# downloads pre-built libwebrtc binaries for Linux x86_64 so first-build
# adds disk + time but not new system packages.
#
# `rustls-tls-native-roots` matches the rest of the workspace (PURA-23,
# PURA-69) — no OpenSSL / native-tls.
livekit = { version = "0.7", default-features = false, features = ["tokio", "rustls-tls-native-roots"] }
livekit-api = { version = "0.4", default-features = false, features = ["signal-client-tokio", "rustls-tls-native-roots", "access-token", "services-tokio"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
futures = { workspace = true }

# Slice c — Opus 1.x via `audiopus`. Inbound TS6 frames arrive as 20ms / 48 kHz
# / mono Opus per the §19.10 prefix; we decode to PCM and feed
# `livekit::webrtc`'s `NativeAudioSource`, which re-encodes for the WebRTC
# track. Same crate + version line the WS-4 prototype settled on.
audiopus = "0.3.0-rc.0"
