[package]
name = "music-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

description = "Music-bot product crate (PURA-117 / PURA-118 WS-1) — bot lifecycle, supervisor, and BotCommand/BotEvent surface for the TS6-native voice bot stack. Audio pipeline lands in WS-2."

[lib]
name = "music_bot"
path = "src/lib.rs"

[features]
default = []
# PURA-118 — gates the live integration test in `tests/lifecycle_e2e.rs`
# the same way `ts6-voice-fixture::audio_e2e` is gated. Pulls nothing
# extra into the default build; the test itself uses only the `tokio`
# test runner that the dev-dep already provides.
lifecycle-e2e = []
# PURA-154 — sibling integration test in `tests/audio_e2e.rs` that
# proves the music-bot-audio pipeline reaches the wire through
# `Connection::send_audio`. Same gating discipline as `lifecycle-e2e`:
# feature + env + `#[ignore]`. The bot's `audio` feature on tsclientlib
# is permanent (not gated) — `send_audio` is the deliverable, not an
# opt-in.
audio-e2e = []

[dependencies]
# PURA-118 reuses the existing voice-fixture helpers (load_or_create_identity,
# wait_for_connected) so we don't fork the connect path. The fixture crate
# already pins tsclientlib to upstream master @ 04aa249 (see
# `crates/ts6-voice-fixture/Cargo.toml` for the pin justification — published
# 0.2.0 fails the TS6 license-chain).
ts6-voice-fixture = { path = "../ts6-voice-fixture" }
# PURA-154 — the audio pipeline that builds Opus 20 ms frames at 48 kHz.
# WS-2 (PURA-119) shipped this crate; the bot actor here is the consumer
# the issue called out as missing.
music-bot-audio = { path = "../music-bot-audio" }
# PURA-154 — `audio` feature lights up `Connection::send_audio` upstream
# (same pin / dance as `crates/ts6-voice-prototype`). We still connect to
# host:port directly, so `default-tls` stays off.
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", rev = "04aa24917abbf6a0c8442a79742d6d2d40ecf71e", default-features = false, features = ["audio"] }
# PURA-154 — `OutAudio` / `AudioData` / `CodecType` for the actual wire
# frame shape. Same git pin as tsclientlib (the two crates ship from the
# same repo).
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib", rev = "04aa24917abbf6a0c8442a79742d6d2d40ecf71e" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
# PURA-121 WS-3 — `MusicBotStore` is async (the WS-5 SurrealDB impl
# needs `async fn` on the trait); `async-trait` keeps the dispatch
# surface object-safe so the supervisor + bot actor share an
# `Arc<dyn MusicBotStore>`.
async-trait = { workspace = true }
# PURA-121 WS-3 — snapshot/load round-trip the in-memory store as JSON.
# Already a workspace dep (used by the lifecycle E2E test), so this is a
# free pull.
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync", "test-util"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
