[package]
name = "moq-spike-sidecar"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "moq-spike-sidecar"
path = "src/main.rs"

[dependencies]
moq-lite = { workspace = true }
moq-native = { workspace = true, default-features = true }

anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
